--- a/config/application.yml
+++ b/config/application.yml
@@ -11,3 +11,6 @@
 #   stripe_publishable_key: pk_live_9lcthxpSIHbGwmdO941O1XVU
 FACEBOOK_APP_KEY: '722220477951048'
 FACEBOOK_APP_SECRET: 54f9d53f28816a8e4940f7ae7386e705
+AWS_ACCESS_KEY_ID: 'AKIAIHLCAB4U7TMA3MDA'
+AWS_SECRET_ACCESS_KEY: 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
+S3_BUCKET: 'ayrbnb-ayoa'
