added signup mailer functionality

--- a/config/application.yml
+++ b/config/application.yml
@@ -14,3 +14,7 @@ FACEBOOK_APP_SECRET: 54f9d53f28816a8e4940f7ae7386e705
 AWS_ACCESS_KEY_ID: 'AKIAIHLCAB4U7TMA3MDA'
 AWS_SECRET_ACCESS_KEY: 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
 S3_BUCKET: 'ayrbnb-ayoa'
+SENDGRD_USERNAME: 'AjArks'
+SENDGRID_PASSWORD: 'Blinkblink#7744'
+
+  # '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'
